--- a/src/config/config-development.yml
+++ b/src/config/config-development.yml
@@ -13,7 +13,10 @@ postgres:
   user: postgres
   password: admin
   dbName: carsaledb
-  sslMode: false
+  sslMode: disable
+  maxIdleConns: 15
+  maxOpenConns: 100
+  connMaxLifetime: 5
 redis:
   host: localhost
   port: 6379
