Add logger structure and interfaces

--- a/src/config/config-development.yml
+++ b/src/config/config-development.yml
@@ -1,9 +1,9 @@
 server:
-  Port: 5005
-  RunMode: debug
+  port: 5005
+  runMode: debug
 logger:
   filePath: ../logs/logs.log
-  Encoding: json
+  encoding: json
   level: debug
 cors:
   allowOrigins: "*"
