--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -46,7 +46,7 @@ scrape_configs:
     metrics_path: /metrics
     scheme: http
     static_configs:
-      - targets: ["web-api1:5000", "web-api2:5000", "192.168.1.89:5005"]
+      - targets: ["192.168.1.89:8080"]
 
   - job_name: "node-exporter"
 
